--- a/src/templates/edit_profile.html
+++ b/src/templates/edit_profile.html
@@ -14,7 +14,7 @@
 <body class="login-body">
     <div class="login-container wide">
         <div class="login-header">
-            <a href="/dashboard?user_email={{ user.email }}&use_saved=true" class="dark-back-link">← Back</a>
+            <a href="/dashboard?user_email={{ user.email }}&use_saved=true" id="back-link" class="dark-back-link">← Back</a>
             <h1>Edit Your Information</h1>
         </div>
 
