--- a/src/input.css
+++ b/src/input.css
@@ -2,5 +2,5 @@
 
 /* Tailwind CSS v4 CSS-first configuration */
 /* Content paths are specified in tailwind.config.js */
-@source "../templates/**/*.html";
-@source "../static/js/**/*.js";
+@source "./templates/**/*.html";
+@source "./static/js/**/*.js";
